test/type_errors/cases/sql_bad_shape.ml
[%%eta.sql.table let x = 1]
